--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Global ==================== */
 :root {
   --dark-blue: #363f5f;
+  --green: #49aa26;
 }
 
 * {
@@ -47,7 +48,7 @@ border-width: 0;
 /* Links e Buttons ==================== */
 a {
   text-decoration: none;
-  color: #49aa26;
+  color: var(--green);
 }
 
 a:hover{
@@ -58,6 +59,36 @@ a:hover{
 .button.new {
   display: inline-block;
   margin-bottom: .8rem;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+  border: none;
+  color: #fff;
+  background: var(--green);
+  padding: 0;
+  border-radius: .25rem;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #3dd705;
+}
+
+.button.cancel {
+  color: #e92929;
+  border: 2px #e92929 solid;
+  border-radius: .25rem;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: .6;
+}
+
+.button.cancel:hover {
+  opacity: 1;
 }
 
 /* Header ==================== */
@@ -112,7 +143,7 @@ header {
 }
 
 .card.total {
-  background: #49aa26;
+  background: var(--green);
   color: #fff;
 }
 
@@ -164,6 +195,67 @@ td.expense {
 
 td.income {
   color: #12a454;
+}
+
+/* Modal =================== */
+/* criando a mascara de backgroud na tela inteira */
+.modal-overlay{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal {
+  background-color: #f0f2f5;
+  padding: 2.4rem;
+}
+
+/* Form =================== */
+#form {
+  max-width: 500px;
+}
+
+#form h2 {
+  margin-top: 0;
+}
+
+input {
+  border: none;
+  border-radius: .2rem;
+  padding: .8rem;
+  width: 100%;
+}
+
+.input-group {
+margin-top: .8rem;
+}
+
+.input-group small {
+  opacity: .4;
+}
+
+.input-group.actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.input-group.actions button,
+.input-group.actions.button {
+  width: 48%;
 }
 
 /* Footer =================== */
